# signal-workers

./: .dockerignore  .gitignore  README.md  requirements.txt
PHI-PII-De-Identification--model-v0/: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
PHI-PII-De-Identification--model-v0/.claude/: settings.local.json
PHI-PII-De-Identification--model-v0/deidentifier/: __init__.py  __main__.py  api.py  audit.py  cli.py  config.py  engine.py  entities.py  pipeline.py  strategies.py
PHI-PII-De-Identification--model-v0/deidentifier/policies/: default.yaml
PHI-PII-De-Identification--model-v0/deidentifier/presidio/: __init__.py  engine.py  recognizers.py
PHI-PII-De-Identification--model-v0/deidentifier/recognizers/: __init__.py  base.py  regex_recognizer.py  spacy_recognizer.py
PHI-PII-De-Identification--model-v0/eval/: BENCHMARK_RESULTS.md  benchmark_models.py  evaluate.py
PHI-PII-De-Identification--model-v0/examples/: example_usage.py  run_presidio.py  run_sample.py
PHI-PII-De-Identification--model-v0/tests/: fixtures.py  sample_pii_text.txt  test_cli.py  test_engine.py  test_pipeline.py  test_presidio_engine.py  test_recognizers.py  test_strategies.py
PII/eval/: evaluate.py  (+1 more)
infra/: docker-compose.yml
signal-workers/: .env.example  Dockerfile  Dockerfile.cost  Dockerfile.performance  Dockerfile.safety  build-all.ps1  requirements.txt  run_worker.py  validate_performance.py
toxicity/: README.md  pyproject.toml
toxicity/configs/: runtime.yaml
toxicity/toxicity_observability/: __init__.py  cli.py  config.py  fasttext_router.py  models.py  pipeline.py
(+11 files in other folders)
