[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deidentifier"
version = "1.0.0"
description = "PHI/PII de-identification for text processing"
requires-python = ">=3.9"
dependencies = [
    "spacy>=3.0.0",
    "faker>=19.0.0",
    "pyyaml>=6.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
presidio = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.scripts]
deidentify = "deidentifier.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["deidentifier*"]
