[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toxicity-observability-runtime"
version = "0.1.0"
description = "Local toxicity observability classifier runtime with FastText routing and BERT confirmers."
requires-python = ">=3.10"
dependencies = [
  "fasttext-numpy2-wheel>=0.9.2",
  "huggingface_hub>=0.30.0",
  "onnxruntime>=1.17",
  "pydantic>=2",
  "pyyaml>=6",
  "safetensors>=0.5.0",
  "torch>=2.2",
  "transformers>=4.52.0",
]

[project.scripts]
toxicity-observe = "toxicity_observability.cli:main"

[tool.setuptools.packages.find]
include = ["toxicity_observability*"]
